src/core/blueprint/transformer/merge_types/snapshots/tailcall__core__config__transformer__merge_types__type_merger__test__interface_types.snap
---
source: src/core/config/transformer/merge_types/type_merger.rs
expression: config.to_sdl()
---
interface GEN__M1 {
  a: Int
}

type C implements GEN__M1 {
  a: Int
}
